React Migration Added gh-pages dependency Added npm scripts for deploying website

--- a/src/cover.css
+++ b/src/cover.css
@@ -67,6 +67,11 @@ body,
   border-bottom: .25rem solid transparent;
 }
 
+.nav-link:hover,
+.btn-secondary:hover {
+  cursor: pointer;
+}
+
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
   border-bottom-color: rgba(255, 255, 255, .25);
